<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.formlogin.FormLogin">

        <TextView
            android:id="@+id/text_logar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_logar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="130dp"
            app:layout_constraintBottom_toTopOf="@id/text_field_email_login"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_logar"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_email_login"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_login_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btt_entrar"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@id/text_field_senha_login"
            />

        <Button
            android:id="@+id/btt_cadastro_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btt_login_cadastro"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/btt_login"
            android:layout_marginTop="70sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>